<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Цахим Сэлэнгэ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_question">Та гарах уу?</string>
    <string name="yes">Тийм</string>
    <string name="no">Үгүй</string>
    <string name="detailed">ДЭЛГЭРЭНГҮЙ</string>
    <string name="menu1">ТАНИЛЦУУЛГА</string>
    <string name="menu2">ТАНД ҮЙЛЧИЛЬЕ</string>
    <string name="menu3">МЭДЭЭ, МЭДЭЭЛЭЛ</string>
    <string name="menu4">ЗУРГИЙН САН</string>
    <string name="menu5">САНАЛ ХҮСЭЛТ</string>
    <string name="menu6">ХОЛБОО БАРИХ</string>
    <string name="menu_footer">Сэлэнгэ аймгийн ЗАСАГ ДАРГЫН ТАМГЫН ГАЗАР\n© 2016</string>
    <string name="name">Нэр *</string>
    <string name="phone">Утас *</string>
    <string name="email">Э-майл *</string>
    <string name="description">Агуулга *</string>
    <string name="send">ИЛГЭЭХ</string>
    <string name="contact1">AZDTG@Selenge.gov.mn</string>
    <string name="contact2">Сэлэнгэ аймаг</string>
 	<string name="no_network_connection_title">Интернэт холболт хийгдээгүй байна</string>
 	<string name="no_network_connection_message">Энэ хуудсыг үзэхийн тулд интернэт холбогдсон байх хэрэгтэй.</string>
    <string-array name="email_arrays">
        <item>Санал</item>
        <item>Өргөдөл</item>
        <item>Гомдол</item>
    </string-array>
    
</resources>
