<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuRl"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@android:color/white">
	
	<ImageView
	    android:id="@+id/coverIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
        android:src="@drawable/bg_blank_cover"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"/>	
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:paddingBottom="@dimen/menu_padding_bottom"
    	android:background="@android:color/white"
    	android:layout_below="@+id/coverIv"
    	android:layout_above="@+id/footerTv">
    	
		<Button
		    android:id="@+id/menu1Btn"
		    android:layout_weight="1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="left|center"
		    android:drawableLeft="@drawable/ic_menu1"
		    android:drawablePadding="@dimen/menu_icon_drawable_padding"
		    android:background="@android:color/transparent"
		    android:text="@string/menu1"
		    android:textSize="@dimen/menu_font_size"
		    android:layout_marginLeft="@dimen/menu_icon_margin_left"/>
		    
		<Button
		    android:id="@+id/menu2Btn"
		    android:layout_weight="1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="left|center"
		    android:drawableLeft="@drawable/ic_menu2"
		    android:drawablePadding="@dimen/menu_icon_drawable_padding"
		    android:background="@android:color/transparent"
		    android:text="@string/menu2"
		    android:textSize="@dimen/menu_font_size"
		    android:layout_marginLeft="@dimen/menu_icon_margin_left"/>
		
		<Button
		    android:id="@+id/menu3Btn"
		    android:layout_weight="1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="left|center"
		    android:drawableLeft="@drawable/ic_menu3"
		    android:drawablePadding="@dimen/menu_icon_drawable_padding"
		    android:background="@android:color/transparent"
		    android:text="@string/menu3"
		    android:textSize="@dimen/menu_font_size"
		    android:layout_marginLeft="@dimen/menu_icon_margin_left"/>
				
		<Button
		    android:id="@+id/menu4Btn"
		    android:layout_weight="1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="left|center"
		    android:drawableLeft="@drawable/ic_menu4"
		    android:drawablePadding="@dimen/menu_icon_drawable_padding"
		    android:background="@android:color/transparent"
		    android:text="@string/menu4"
		    android:textSize="@dimen/menu_font_size"
		    android:layout_marginLeft="@dimen/menu_icon_margin_left"/>
		
		<Button
		    android:id="@+id/menu5Btn"
		    android:layout_weight="1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="left|center"
		    android:drawableLeft="@drawable/ic_menu5"
		    android:drawablePadding="@dimen/menu_icon_drawable_padding"
		    android:background="@android:color/transparent"
		    android:text="@string/menu5"
		    android:textSize="@dimen/menu_font_size"
		    android:layout_marginLeft="@dimen/menu_icon_margin_left"/>
		
		<Button
		    android:id="@+id/menu6Btn"
		    android:layout_weight="1"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:gravity="left|center"
		    android:drawableLeft="@drawable/ic_menu6"
		    android:drawablePadding="@dimen/menu_icon_drawable_padding"
		    android:background="@android:color/transparent"
		    android:text="@string/menu6"
		    android:textSize="@dimen/menu_font_size"
		    android:layout_marginLeft="@dimen/menu_icon_margin_left"/>
				
   	</LinearLayout>

    <TextView 
        android:id="@+id/footerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:text="@string/menu_footer"
        android:textSize="10sp"
        android:gravity="center_horizontal"/>
    
</RelativeLayout>
