<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentTop="true"
	    android:orientation="vertical" >
	    
		<Spinner
	        android:id="@+id/typeSp"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:entries="@array/email_arrays"
	        android:background="#F2F3F4"
	        android:textSize="14sp"
	        android:typeface="serif"
	        android:layout_marginBottom="10dp"/>
	
		<EditText
		    android:id="@+id/nameEt"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:inputType="none"
	        android:hint="@string/name"
	        android:background="#F2F3F4"
	        android:textSize="14sp"
	        android:typeface="serif"
	        android:layout_marginBottom="10dp"/>
		
		<EditText
		    android:id="@+id/phoneEt"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:inputType="number"
	        android:hint="@string/phone"
	       	android:background="#F2F3F4"
	        android:textSize="14sp"
	        android:typeface="serif"
	        android:layout_marginBottom="10dp"/>
		
		<EditText
		    android:id="@+id/emailEt"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:inputType="textEmailAddress"
	        android:hint="@string/email"
	        android:background="#F2F3F4"
	        android:textSize="14sp"
	        android:typeface="serif"
	        android:layout_marginBottom="10dp"/>
		
		<EditText
		    android:id="@+id/descriptionEt"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/description"
		    android:inputType="textCapSentences|textMultiLine"
		    android:gravity="top"
		    android:lines="10"
		   	android:background="#F2F3F4"
	        android:textSize="14sp"
	        android:typeface="serif"
		    android:layout_marginBottom="10dp"/>
	
	</LinearLayout>
		
	<Button 
	    android:id="@+id/sendBtn"
	    android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/send"
 		android:layout_alignParentBottom="true"
 		android:background="@android:color/white"
 		android:textColor="#1686c5"/>	    
 		  
 </RelativeLayout>
